@@ -2,6 +2,8 @@ December 1, 2009 Wei Mingzhi <weimingzhi@gmail.com>
 
  * plugins/dfcdrom/cdr-linux.c: Fixed crash bug when resuming emulation in
    Threaded mode.
+ * gui/MemcardDlg.c: Don't keep previous selection after creating a new
+   memcard, formatting a memcard, or changing a memcard.
 
 November 30, 2009 Wei Mingzhi <weimingzhi@gmail.com>
 
